refactor: fixed massive issue with Solr on lack of synchronicity between reader + writer, and impossibility to flush the commits in a very short time and therefore lag between reader and writer + refactor memoryUpdate, use blocking queue which is more fit + refactor on update pojo field names + fix on search query when NOT looking for the category

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+logging.level.uk.gov.nationalarchives.discovery.taxonomy: DEBUG
+
 spring.activemq:
  broker-url: "tcp://localhost:61616"
  user: "system"
@@ -11,14 +13,13 @@ mongo.categories:
  database: taxonomy
 
 solr.cloud:
-# read.host: http://wb-solrapp2:8985/solr/IAVIEWS_SNAPSHOT/
  read.host: http://localhost:12602/solr/DISCOVERY/
  write:
-  host: http://localhost:8983/solr/IAView_subset/
+  host: http://localhost:12602/solr/DISCOVERY/
   commit-within: 10000
 
 
 
 scheduler.update-solr:
- bulk-update-size: 2000
+ bulk-update-size: 5000
  rate-between-updates: 2000
