--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,9 @@ mongo.categories:
  database: taxonomy
 
 solr.cloud:
- read.host: http://localhost:12602/solr/DISCOVERY/
+ read:
+  host: http://localhost:12602/solr/DISCOVERY/
+  query-page-size: 1000
  write:
   host: http://localhost:12602/solr/DISCOVERY/
   commit-within: 10000
